[#21] 구독 도메인 CRUD API 구현
